# ubuntu_QuickTest

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Page1Form.ui.qml  Page2Form.ui.qml  launch.vs.json  main.cpp  main.qml
